KaTeX works! Added math post

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,6 +2,10 @@ title: My Website
 description: A simple personal website
 baseurl: ""
 
+markdown: kramdown
+kramdown:
+  math_engine: katex
+
 exclude:
   - README.md
   - vendor/
