--- a/_config.yaml
+++ b/_config.yaml
@@ -1,7 +1,7 @@
 title: Perseus' Website
 description: A simple personal website
+url: "https://perseus333.github.io"
 baseurl: ""
-url: "perseus333.github.io"
 author: Perseus
 
 markdown: kramdown
@@ -40,6 +40,7 @@ defaults:
       type: "projects"
     values:
       layout: "project"
+      excerpt_separator: <!--more-->
       permalink: "/projects/:slug"
 
 exclude:
